Fix figcaption color for dark mode

--- a/public/styles.less
+++ b/public/styles.less
@@ -148,6 +148,10 @@ mark {
   }
 }
 
+.figure-caption {
+  color: var(--figure-caption-color);
+}
+
 .pac-container {
   -webkit-backdrop-filter: saturate(180%) blur(20px);
   background: var(--awesomplete-background-color);
@@ -260,6 +264,7 @@ mark {
   --close-text-shadow: 0 1px 0 #fff;
   --facebook-blue: #4267B2;
   --facebook-blue-hover: darken(#4267B2, 10%);
+  --figure-caption-color: #6c757d;
   --form-control-background-color: #fff;
   --form-control-border-color: #ced4da;
   --form-control-text-color: #495057;
@@ -317,6 +322,7 @@ mark {
     --close-text-shadow: 0 1px 0 #000;
     --dark: #f8f9fa;
     --facebook-blue-hover: lighten(#4267B2, 10%);
+    --figure-caption-color: #bbb;
     --form-control-background-color: #666;
     --form-control-border-color: #777;
     --form-control-text-color: #ccc;
